# react-native-jsi-trial

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-jsi-trial.podspec  tsconfig.json
android/: .project  CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativejsitrial/: JsiTrialModule.java  JsiTrialPackage.java
cpp/: Binding.cpp  Binding.h
example/: app.json  package-lock.json  package.json
example/android/: .project  settings.gradle
example/android/app/: .project  build.gradle
example/android/app/src/debug/java/com/example/reactnativejsitrial/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/assets/: index.android.bundle
example/android/app/src/main/java/com/example/reactnativejsitrial/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/JsiTrialExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/JsiTrialExample.xcodeproj/: project.pbxproj
example/ios/JsiTrialExample.xcodeproj/xcshareddata/xcschemes/: JsiTrialExample.xcscheme
example/ios/JsiTrialExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.js  benchmarks.js
ios/: JsiTrial.h  JsiTrial.m  JsiTrial.mm
ios/JsiTrial.xcodeproj/: project.pbxproj
src/: index.js
